Minutas ComCom: Correcciones
Corrijo items, propuestas para el grupo de Telegram.

--- a/minutas-ComCom/14-09-18.md
+++ b/minutas-ComCom/14-09-18.md
@@ -34,7 +34,9 @@ El grupo de Telegram de la carrera esta tomando una dimensión muy grande (440 m
 Dadas las discusiones que se dan, tememos que ponerle un marco mas claro: Posibles reglas, y/o definir la relación con la ComCom.
 
 ## Opciones a las que llegamos:
-	 * 1) Adaptar las reglas actuales del grupo de fb a su "equivalente" en Telegram. Proponer esas reglas a les miembres activos del grupo. Si las aceptan, el grupo toma mas legitimidad como grupo de la ComCom. Les codepers se reservan el derecho de administrar/moderar, o delegar esta función en otros miembres.
-	 * 2) El grupo elige de manera autónoma sus normas y moderadores pero separado de la ComCom y sin aparecer en materiales oficiales como las charlas de divulgación e ingresantes.
+	 1. Adaptar las reglas actuales del grupo de fb a su "equivalente" en Telegram.
+	 Proponer esas reglas a les miembres activos del grupo. Si las aceptan, el grupo toma mas legitimidad como grupo de la ComCom.
+	 Les codepers se reservan el derecho de administrar/moderar, o delegar esta función en otros miembres.
+	 2. El grupo elige de manera autónoma sus normas y moderadores pero separado de la ComCom y sin aparecer en materiales oficiales como las charlas de divulgación e ingresantes.
 
 Tambien se habló de seguir impulsando el uso del canal de noticias del DC en Telegram. 
