COMCOM: Agregado un cachito de formato

--- a/minutas-ComCom/18-05-19.md
+++ b/minutas-ComCom/18-05-19.md
@@ -1,8 +1,8 @@
-NDJ
+# NDJ
 	- encuesta
 	- faltan sillas
 
-Talleres
+# Talleres
 	- este cuatri: git, linux
 	- proximo cuatri: informes, proyecto
 	- preguntas
@@ -10,7 +10,7 @@ Talleres
 		+ open source -> relacion con proyecto
 		+ varios quieren docker
 
-Proyectos
+# Proyectos
 	- bot TG - abierto a contribuciones
 	- web comcom
 		+ cuede
@@ -23,7 +23,7 @@ Proyectos
 			- donde alojar?
 	- PODCAST
 
-DC-DM-IC
+# DC-DM-IC
 	- reunion el miercoles pasado, fue Tobi
 	- pocos avances desde octubre
 		+ 30 opts
@@ -31,7 +31,7 @@ DC-DM-IC
 		+ mismo plan de estudios - poco consenso
 	- falta representante - abrir al grupo
 
-Comision viajes UBA
+# Comision viajes UBA
 	- 1 integrante/claustro
 	- pedidos docentes
 	- arman orden de merito
@@ -39,7 +39,7 @@ Comision viajes UBA
 	- puesto anual
 	- se postula Luis Greco - luifergreco@gmail.com
 
-Plan de estudios
+# Plan de estudios
 	- mantener perfil, actualizar y reordenar temas
 	- muchos detalles en abstracto
 		+ introd a la programacion, reemplaza taller algebra
@@ -50,7 +50,7 @@ Plan de estudios
 	- reunion abierta de avances
 		+ publicar minutas
 
-Genero
+# Genero
 	- GenEx
 		+ 2017 - lanzo encuesta por mail sobre violencia de genero
 		+ ahora - presentacion datos
@@ -74,7 +74,7 @@ Genero
 		+ mejoramiento GenEx
 		+ visibilizacion disidencias
 
-Otros temas
+# Otros temas
 	- Accidente en la escalera - Brian Curcio
 		+ Enfermería - plantear en codep - hablar con caro o somodi
 	- NDJ
