Minuta ComCom: Reformateado

--- a/minutas-ComCom/18-05-19.md
+++ b/minutas-ComCom/18-05-19.md
@@ -3,7 +3,7 @@
 	- encuesta
 	- faltan sillas
 
-# Talleres
+## Talleres
 	- este cuatri: git, linux
 	- proximo cuatri: informes, proyecto
 	- preguntas
@@ -11,20 +11,25 @@
 		+ open source -> relacion con proyecto
 		+ varios quieren docker
 
-# Proyectos
-	- bot TG - abierto a contribuciones
-	- web comcom
-		+ cuede
-			- nuevo cubawiki
-		+ comcom.dc.uba.ar
-			- pag estatica
-			- blog
-			- links utiles, info codepers cuede
-			- abierto a colaboracion
-			- donde alojar?
-	- PODCAST
+## También invitamos a quien quiera proponer alguna actividad a comunicarla y ponerla en marcha
 
-# DC-DM-IC
+# Proyectos
+## bot TG - abierto a contribuciones
+## web comcom
+	+ cuede
+ 		- nuevo cubawiki
+	+ comcom.dc.uba.ar
+		- pag estatica
+		- blog
+		- links utiles, info codepers cuede
+		- abierto a colaboracion
+		- donde alojar?
+## PODCAST 
+	+(seba y guttman tendrian q completar algo aca, supongo)
+
+## Nuevamente invitamos a quien quiera proponer algun proyecto a comunicarlo y ponerlo en marcha
+
+# CARRERA (MCD)^2: DC-DM-IC
 	- reunion el miercoles pasado, fue Tobi
 	- pocos avances desde octubre
 		+ 30 opts
@@ -40,7 +45,7 @@
 	- puesto anual
 	- se postula Luis Greco - luifergreco@gmail.com
 
-# Plan de estudios
+# Flan de estudios
 	- mantener perfil, actualizar y reordenar temas
 	- muchos detalles en abstracto
 		+ introd a la programacion, reemplaza taller algebra
@@ -52,7 +57,7 @@
 		+ publicar minutas
 
 # Genero
-	- GenEx
+## GenEx
 		+ 2017 - lanzo encuesta por mail sobre violencia de genero
 		+ ahora - presentacion datos
 			- elaborada junto con FFyL y UNSAM
@@ -63,14 +68,15 @@
 		+ taller de visibilizacion de violencia de genero
 		+ reuniones demasiado esporadicas
 		+ horarios por mail - genex@de.fcen.uba.ar
-	- Mujeres del DC
+## Mujeres del DC
 		+ reunion con Santi Figueira
 		+ se envio carta para difundir entre profesores
 		+ reunion entre profesores
 		+ documento de conducta
 		+ armar talleres (1:00:00)
-	- Grupo de varones
-	- Comision de Genero
+## Grupo de varones
+	+Existe y no se que mas poner por que soy rozen
+## Comision de Genero
 		+ pibas C3
 		+ mejoramiento GenEx
 		+ visibilizacion disidencias
