Minuta ComCom: agregado repo al bot

--- a/minutas-ComCom/18-05-19.md
+++ b/minutas-ComCom/18-05-19.md
@@ -14,7 +14,9 @@
 ## También invitamos a quien quiera proponer alguna actividad a comunicarla y ponerla en marcha
 
 # Proyectos
-## bot TG - abierto a contribuciones
+## Bot TG - abierto a contribuciones
+	+Link del repo: https://github.com/rozen03/dcubabot
+	
 ## web comcom
 	+ cuede
  		- nuevo cubawiki
