--- a/minutas-ComCom/18-05-19.md
+++ b/minutas-ComCom/18-05-19.md
@@ -1,91 +1,125 @@
 # ACTIVIDADES
 ## NDJ
-	- encuesta
-	- faltan sillas
+- Se hizo una encuesta para saber qué cosas se pueden mejorar
+- El principal problema es que faltan sillas
+- En las próximas ediciones, se va a poner una gorra con el objetivo de recaudar plata para reposición de juegos (actualmente la mayoría de juegos los ponen los mismos 3/4 estudiantes, y estos se desgastan con el uso).
 
 ## Talleres
-	- este cuatri: git, linux
-	- proximo cuatri: informes, proyecto
-	- preguntas
-		+ scripting se mete en los otros 2
-		+ open source -> relacion con proyecto
-		+ varios quieren docker
+- Este cuatri se dieron dos talleres: git y linux
+- El proximo cuatri se piensan dar: informes, proyecto
+- Preguntas que fueron surgiendo
+	- Cosas scripting se va a ver tanto en el taller de informes como el de proyecto, de distintas formas
+	- Proyectos open source -> relación con el taller de proyecto
+	- Está la idea de hacer un taller de docker
 
-## También invitamos a quien quiera proponer alguna actividad a comunicarla y ponerla en marcha
+**También invitamos a quien quiera proponer alguna actividad a comunicarla y ponerla en marcha**
 
 # Proyectos
 ## Bot TG - abierto a contribuciones
-	+Link del repo: https://github.com/rozen03/dcubabot
-	
-## web comcom
-	+ cuede
- 		- nuevo cubawiki
-	+ comcom.dc.uba.ar
-		- pag estatica
-		- blog
-		- links utiles, info codepers cuede
-		- abierto a colaboracion
-		- donde alojar?
-## PODCAST 
-	+(seba y guttman tendrian q completar algo aca, supongo)
 
-## Nuevamente invitamos a quien quiera proponer algun proyecto a comunicarlo y ponerlo en marcha
+Link del repo: https://github.com/rozen03/dcubabot
 
-# CARRERA (MCD)^2: DC-DM-IC
-	- reunion el miercoles pasado, fue Tobi
-	- pocos avances desde octubre
-		+ 30 opts
-		+ tesis - ideas vs abandono
-		+ mismo plan de estudios - poco consenso
-	- falta representante - abrir al grupo
+## QED
+
+La idea es reemplazar CubaWiki con una página nueva, con features piolas.
+
+- Link: https://cuede.herokuapp.com/
+- Repo: https://github.com/nsanmartin/qed
+
+## Web ComCom
+
+Hace un tiempo el DC nos dio el dominio `comcom.dc.uba.ar`.
+Actualmente solo tiene la [info de algunos talleres](https://comcom.dc.uba.ar/talleres/).
+
+Ideas:
+- Hacer una página estatica
+- Poner un blog con noticias de la ComCom
+- Links utiles, info de les CoDepers, conectar con QED
+- Abierto a colaboracion
+- Hay que ver donde alojarlo
+
+**Si te interesa sumarte a pensar y hacer esta página, hablá con les Tobi Carreira o Martin G**.
+
+## Podcast 
+
+Hay un grupo pensando hacer un podcast
+
+-(seba y guttman tendrian q completar algo aca, supongo)
+
+**Nuevamente invitamos a quien quiera proponer algun proyecto a comunicarlo y ponerlo en marcha, toda idea es bienvenida!**
+
+# Nueva carrera (MCD)^2, del DC-DM-IC
+
+Hubo una reunion el miercoles pasado, fue Tobi.
+Hubo pocos avances desde octubre
+
+- Se agregó un listado de optativas
+- Se pensaron varias ideas sobre la tesis, con el objetivo de que la gente no la abandone
+
+Se armó un grupo para pensar esto más a fondo. **Si te interesa, hablá con les CoDeppers**
 
 # Comision viajes UBA
-	- 1 integrante/claustro
-	- pedidos docentes
-	- arman orden de merito
-	- falta elegir representante alumno
-	- puesto anual
-	- se postula Luis Greco - luifergreco@gmail.com
 
-# Flan de estudios
-	- mantener perfil, actualizar y reordenar temas
-	- muchos detalles en abstracto
-		+ introd a la programacion, reemplaza taller algebra
-		+ algebra y analisis, potestad dc vs dm
-		+ mezclar temnas de PyE en otras materias
-		+ reduccion de carga horaria
-		+ orientaciones
-	- reunion abierta de avances
-		+ publicar minutas
+Es una comisión del DC que tiene 1 integrante por cada claustro (estudiantes, graduades, profesores).
+Su objetivo es, a partir de pedidos de docentes de presupuesto para viajar, arman un orden de merito.
+Estaba faltando elegir representante estudiantil, es un puesto anual.
+Se postuló Luis Greco - luifergreco (at) gmail.com
+
+# Cambio de plan de estudios de la Lic. en Cs. de la Computación
+
+La idea es mantener perfil, actualizar y reordenar temas.
+
+Algunas ideas:
+- Ver programación desde el primer cuatri, en una materia llamada Introd. a la Programacion, reemplaza taller de algebra
+- Cambiar álgebra por una materia similar con algunos temas que salen y otros que entran (como nociones básicas de proba)
+- Mezclar temas de PyE en otras materias
+. Se consideró la opción de poner orientaciones
+
+Se propone realizar reuniones abiertas para hablar el tema, además de publicar minutas de las reuniones de comisión.
 
 # Genero
 ## GenEx
-		+ 2017 - lanzo encuesta por mail sobre violencia de genero
-		+ ahora - presentacion datos
-			- elaborada junto con FFyL y UNSAM
-			- datos no publicados aun
-			- mas comunes mujeres - acoso, imagenes ofensivas, miedo de uso de espacios
-			- mas comunes varones - comentarios por genero/orientacion, imagenes ofensivas
-			- problematica transversal al claustro
-		+ taller de visibilizacion de violencia de genero
-		+ reuniones demasiado esporadicas
-		+ horarios por mail - genex@de.fcen.uba.ar
+
+Encuesta sobre violencia de género en la facultad:
+
+- En 2017 se lanzó una encuesta por mail sobre violencia de género
+- Este viernes se hizo la presentación de datos:
+	- Elaborada junto con FFyL y UNSAM
+	- Datos no publicados aun, deberían subirlos a la web de la facultad
+	- Más comunes mujeres - acoso, imagenes ofensivas, miedo de uso de espacios
+	- Más comunes varones - comentarios por genero/orientacion, imagenes ofensivas
+	- Problematica transversal - no había mucha diferencia entre claustros
+
+- El GenEx dijo que planea realizar taller de visibilizacion de violencia de genero.
+- Las reuniones de GenEx vienen siendo demasiado esporadicas.
+- horarios por mail - genex@de.fcen.uba.ar
+
 ## Mujeres del DC
-		+ reunion con Santi Figueira
-		+ se envio carta para difundir entre profesores
-		+ reunion entre profesores
-		+ documento de conducta
-		+ armar talleres (1:00:00)
+
+- Se reunieron con Santi Figueira
+- Se envio carta para difundir entre profesores
+- Hubo una reunion entre profesores
+- Se está preparando un documento de conducta
+- Armar talleres (1:00:00)
+
 ## Grupo de varones
-	+Existe y no se que mas poner por que soy rozen
-## Comision de Genero
-		+ pibas C3
-		+ mejoramiento GenEx
-		+ visibilizacion disidencias
+
+Hace poco se creo una grupo de varones, para hablar y discutir de temas relacionados con feminismo desde cómo nos afectan (y cómo afectamos nosotros) estas problemáticas en nuestro rol como varones.
+También armamos un grupo más reducido para pensar actividades a realizar. **Si te interesa, hablá con Tobi Carreira o Sebas**.
+
+## Comision de Genero del CECEN
+
+Actualmente está tratando los siguientes temas:
+- Problemas con violencia de género en el C3
+- Mejoramiento GenEx
+- Visibilizacion de disidencias
 
 # Otros temas
-	- Accidente en la escalera - Brian Curcio
-		+ Enfermería - plantear en codep - hablar con caro o somodi
-	- NDJ
-		+ gorra de reposicion de juegos
 
+## Enfermería en el Pab. 1
+
+Hace poco hubo un accidente en la escalera del playón, a partir de esto se plantea la necesidad de que haya una enfermería en el pabellón 1.
+
+A futuro:
+- Plantear el problema en CoDep
+- hablar con Caro o Somodi para llevarlo al Consejo Directivo
