agrego comisión de género

--- a/minutas-ComCom/18-05-19.md
+++ b/minutas-ComCom/18-05-19.md
@@ -114,6 +114,12 @@ Actualmente está tratando los siguientes temas:
 - Mejoramiento GenEx
 - Visibilizacion de disidencias
 
+## Comision de Genero del DC
+
+Crear una comisión de géneros de estudiantes del DC con el objetivo de:
+- articular entre el grupo de varones y de mujeres del DC
+- pensar actividades/talleres sobre masculinidades y reconocimiento de violencias
+
 # Otros temas
 
 ## Enfermería en el Pab. 1
